--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
     "$schema": "node_modules/wrangler/config-schema.json",
     "main": ".open-next/worker.js",
-    "name": "my-app",
+    "name": "xceltutors",
     "compatibility_date": "2024-12-30",
     "compatibility_flags": [
         // Enable Node.js API
@@ -19,14 +19,23 @@
         {
             "binding": "WORKER_SELF_REFERENCE",
             // The service should match the "name" of your worker
-            "service": "my-app",
+            "service": "xceltutors",
         },
     ],
-    "r2_buckets": [
-        // Create a R2 binding with the binding name "NEXT_INC_CACHE_R2_BUCKET"
-        // {
-        //   "binding": "NEXT_INC_CACHE_R2_BUCKET",
-        //   "bucket_name": "<BUCKET_NAME>",
-        // },
+    "routes": [
+        {
+            "pattern": "xceltutors.com",
+            "custom_domain": true
+        }
     ],
+    "r2_buckets": [
+        {
+            "bucket_name": "nextcache",
+            "binding": "NEXT_INC_CACHE_R2_BUCKET"
+        }
+    ],
+    "observability": {
+        "enabled": true,
+        "head_sampling_rate": 1
+    }
 }
