--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -37,5 +37,8 @@
     "observability": {
         "enabled": true,
         "head_sampling_rate": 1
+    },
+    "vars": {
+        "NEXT_PUBLIC_CONVEX_URL": "https://giant-bloodhound-175.convex.cloud"
     }
 }
