--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "next build",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
-    "deploy": "npx convex deploy && opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "deploy": "npx convex deploy && opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
